testsuite/testcases/src/test/cases/syntaxnull/null-flex.output
Reading "src/test/cases/syntaxnull/null.flex"

Error in file "src/test/cases/syntaxnull/null.flex" (line 9): 
Syntax error.
}
^
